feat: add minimalist about section with skills
issue #3

--- a/index.html
+++ b/index.html
@@ -21,6 +21,23 @@
     </nav>
 
     <!-- All sections will go here -->
+     <!-- About Section -->
+<section id="about" class="about-section">
+  <div class="about-content">
+    <h2>About</h2>
+    <p class="tagline">Curious by nature, methodical by design.</p>
+    <p class="description">I bring structure to complexity and empathy to interface.</p>
+    
+    <div class="skills">
+      <h3>What I Do</h3>
+      <ul>
+        <li>Frontend Development</li>
+        <li>UI/UX Design</li>
+        <li>Problem Solving</li>
+      </ul>
+    </div>
+  </div>
+</section>
     
     <!-- JavaScript -->
     <script src="script.js"></script>
