feat: add jS, Style and image to projects section
issue #3

--- a/index.html
+++ b/index.html
@@ -38,8 +38,137 @@
     </div>
   </div>
 </section>
-    
+<!-- Projects Section -->
+<section id="projects" class="projects-section">
+  <h2>Featured Work</h2>
+  <p class="section-subtitle">Selected projects showcasing design and development skills</p>
+
+  <div class="projects-grid">
+    <!-- Project 1: Moodiaco -->
+    <div class="project-card">
+      <div class="project-image">
+        <img src="assets/image5.jpeg" alt="Moodiaco Online Learning Platform" loading="lazy">
+      </div>
+      <div class="project-info">
+        <h3>Moodiaco</h3>
+        <p>Online learning platform with course discovery and promotions.</p>
+        <div class="project-tags">
+          <span>Web Design</span>
+          <span>Education</span>
+        </div>
+        <a href="#" class="project-link">View Case Study →</a>
+      </div>
+    </div>
+
+    <!-- Project 2: TimeScape -->
+    <div class="project-card">
+      <div class="project-image">
+        <img src="assets/image6.jpeg" alt="TimeScape App Interface" loading="lazy">
+      </div>
+      <div class="project-info">
+        <h3>TimeScape</h3>
+        <p>Minimalist productivity app with user onboarding flow.</p>
+        <div class="project-tags">
+          <span>Web App</span>
+          <span>UX Design</span>
+        </div>
+        <a href="#" class="project-link">landscape Prototype →</a>
+      </div>
+    </div>
+
+    <!-- Project 3: Inspirational Brand -->
+    <div class="project-card">
+      <div class="project-image">
+        <img src="assets/image.jpeg" alt="Inspirational Brand Campaign" loading="lazy">
+      </div>
+      <div class="project-info">
+        <h3>Meaningful Journeys</h3>
+        <p>Lifestyle brand campaign with motivational messaging.</p>
+        <div class="project-tags">
+          <span>Branding</span>
+          <span>Copywriting</span>
+        </div>
+        <a href="#" class="project-link">Occassionans Campaign →</a>
+      </div>
+    </div>
+
+    <!-- Add remaining 4 projects following the same pattern -->
+     <!-- Project 4: Weather & Dashboard-->
+    <div class="project-card">
+      <div class="project-image">
+        <img src="assets/Image1.jpeg" alt="Inspirational Brand Campaign" loading="lazy">
+      </div>
+      <div class="project-info">
+        <h3>Weather Mobile App</h3>
+        <p>A personalized dashboard interface displaying weather.</p>
+        <div class="project-tags">
+          <span>Mobile App</span>
+          <span>Feature Design</span>
+        </div>
+        <a href="#" class="project-link">View Campaign →</a>
+      </div>
+    </div>
+
+    <!-- Project 5: Mug Mate Coffee App -->
+    <div class="project-card">
+      <div class="project-image">
+        <img src="assets/image2.jpeg" alt="Inspirational Brand Campaign" loading="lazy">
+      </div>
+      <div class="project-info">
+        <h3>Meaningful Journeys</h3>
+        <p>User-friendly coffee app designed to enhance the brewing experience.</p>
+        <div class="project-tags">
+          <span>Coffee App</span>
+          <span>UI/UX Design</span>
+          
+        </div>
+        <a href="#" class="project-link">View Campaign →</a>
+      </div>
+    </div>
+
+    <!-- Project 6: Conference Mate -->
+    <div class="project-card">
+      <div class="project-image">
+        <img src="assets/image3.jpeg" alt="Inspirational Brand Campaign" loading="lazy">
+      </div>
+      <div class="project-info">
+        <h3>Conference Mate</h3>
+        <p>A snippet for an event or conference platform, echoing the inspirational message.</p>
+        <div class="project-tags">
+          <span>Book Now</span>
+          <span>Copywriting</span>
+        </div>
+        <a href="#" class="project-link">View Campaign →</a>
+      </div>
+    </div>
+
+    <!-- Project 7 : Conference Mate -->
+    <div class="project-card">
+      <div class="project-image">
+        <img src="assets/Image4.jpeg" alt="Inspirational Brand Campaign" loading="lazy">
+      </div>
+      <div class="project-info">
+        <h3>Discover Endless Entertainment</h3>
+        <p>Discover is the perfect destination for entertainment enthusiasts.</p>
+        <div class="project-tags">
+          <span>Discover now</span>
+          <span>vast collection</span>
+        </div>
+        <a href="#" class="project-link">View Campaign →</a>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+    <footer>
+  <div>
+    &copy; <span id="year"></span> Firdaws. All rights <reserved class="2025"></reserved>
+  </div>
+</footer>
+
     <!-- JavaScript -->
     <script src="script.js"></script>
+
 </body>
 </html>
