feat: add a comprehensive about me section
I added a detailed "About Me" section to my portfolio, showcasing my background, education, skills, and personal interests. This section includes:
- A brief introduction about myself
- My educational background with relevant coursework
- A summary of my projects, achievements and skills
- Quick facts about my interests and hobbies

Closes #6

--- a/index.html
+++ b/index.html
@@ -98,8 +98,98 @@
         <!-- About Section -->
         <section id="about" class="about">
             <div class="container">
-                <h2>About Me</h2>
-                <p>More content coming soon...</p>
+                <h2 class="section-title">About Me</h2>
+                <div class="about-content">
+                    <div class="about-text">
+                        <div class="about-intro">
+                            <h3>Hello! I'm Elvis Makara</h3>
+                            <p class="intro-text">
+                                I'm a passionate Computer Science student in my 4th year, with a deep fascination for
+                                technology and its potential to solve real-world problems. My journey in programming
+                                started with curiosity and has evolved into a genuine love for creating digital
+                                solutions.
+                            </p>
+                        </div>
+
+                        <div class="about-details">
+                            <div class="detail-item">
+                                <h4>🎓 Education</h4>
+                                <p><strong>Bachelor of Computer Science</strong><br>
+                                    Strathmore University | Expected Graduation: 2026<br>
+                                    <em>Relevant Coursework:</em> Data Structures, Algorithms, Database Systems, Web
+                                    Development, Software Engineering, Machine Learning, Server Administration</em>
+                                </p>
+                            </div>
+
+                            <div class="detail-item">
+                                <h4>💼 Experience</h4>
+                                <p><strong>Student Developer</strong><br>
+                                    Working on various academic and personal projects including web applications,
+                                    mobile apps, and data analysis projects. Experienced in both front-end and
+                                    back-end development.</p>
+                                
+                                <p><strong>Mid Level Backend Developer</strong><br>
+                                    Currently employed at Hasibu Technologies, where I contribute to building and maintaining scalable backend systems, collaborate with cross-functional teams, and help deliver robust software solutions.
+                                </p>
+                                
+                                <p><strong>Internships</strong><br>
+                                    Participated in internships where I gained hands-on experience in software development,
+                                    collaborating with teams, and applying theoretical knowledge to practical scenarios.</p>
+
+                                <p><strong>Hackathons</strong><br>
+                                    Actively participated in hackathons, where I developed quick prototypes and solutions
+                                    to real-world problems, enhancing my problem-solving skills and teamwork.</p>
+                                </p>
+                            </div>
+
+                            <div class="detail-item">
+                                <h4>🌟 Interests</h4>
+                                <p>When I'm not coding, I enjoy exploring new technologies, contributing to open-source
+                                    projects, and staying updated with the latest trends in tech. I'm particularly
+                                    interested
+                                    in artificial intelligence, web development, and user experience design.</p>
+                            </div>
+                        </div>
+
+                        <div class="about-stats">
+                            <div class="stat-item">
+                                <span class="stat-number">3+</span>
+                                <span class="stat-label">Years of Study</span>
+                            </div>
+                            <div class="stat-item">
+                                <span class="stat-number">5+</span>
+                                <span class="stat-label">Projects Completed</span>
+                            </div>
+                            <div class="stat-item">
+                                <span class="stat-number">10+</span>
+                                <span class="stat-label">Technologies Learned</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="about-image">
+                        <div class="image-container">
+                            <!-- <img src="images/about-photo.jpg" alt="About [Your Name]" class="about-photo"> -->
+                            <!-- Placeholder if no image -->
+                            <div class="about-placeholder">
+                                <div class="placeholder-content">
+                                    <span class="code-symbol">&lt;/&gt;</span>
+                                    <p>Code • Create • Innovate</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="quick-facts">
+                            <h4>Quick Facts</h4>
+                            <ul class="facts-list">
+                                <li><span class="fact-icon">📍</span> Based in Nairobi, Kenya</li>
+                                <li><span class="fact-icon">🎯</span> Focused on Full-Stack Development and Machine Learning</li>
+                                <li><span class="fact-icon">🚀</span> Always Learning Something New</li>
+                                <li><span class="fact-icon">☕</span> Fueled by Coffee, Music & Curiosity</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
