feat: Add About Me Section issue: #5

--- a/index.html
+++ b/index.html
@@ -22,5 +22,14 @@
     <p>Informatics & Computer Science Student @ Strathmore University</p>
     <a href="#projects" class="cta">Check Out My Work</a>
   </section>
+  <section id="about" class="about">
+  <h2>About Me</h2>
+  <p>
+    I'm Nick Hesbourne Agon’g, an Informatics & Computer Science student at Strathmore University.
+    Passionate about building software that solves real-world problems, I enjoy working on web/mobile projects,
+    backend systems, and anything that fuses creativity with logic.
+  </p>
+</section>
+
 </body>
 </html>
