feat: Add Projects section with responsive card layout issue: #6

--- a/index.html
+++ b/index.html
@@ -30,6 +30,22 @@
     backend systems, and anything that fuses creativity with logic.
   </p>
 </section>
+<section id="projects" class="projects">
+  <h2>Projects</h2>
+  <div class="project-grid">
+    <div class="project-card">
+      <h3>Helpy</h3>
+      <p>A mobile app linking homeowners to home service providers. Built with Kotlin & Firebase.</p>
+      <a href="https://github.com/NickoBeast1/helpy" target="_blank">View Project</a>
+    </div>
+    <div class="project-card">
+      <h3>Mediminder</h3>
+      <p>An app to help patients track their medication schedules. Built with Kotlin and SQLite.</p>
+      <a href="https://github.com/NickoBeast1/mediminder" target="_blank">View Project</a>
+    </div>
+  </div>
+</section>
+
 
 </body>
 </html>
