feat: Add Contact Section with email links
issue : #7

--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
     </div>
   </div>
 </section>
+<section id="contact" class="contact">
+  <h2>Contact Me</h2>
+  <p>If you’d like to collaborate, connect, or just say hi — I’m always open.</p>
+  <div class="contact-links">
+    <a href="mailto:nick.odhiambo@gmail.com">Email</a>
+    <a href="https://github.com/NickoBeast1" target="_blank">GitHub</a>
+    <a href="https://www.linkedin.com/in/nick-hesbourne-agon%E2%80%99g-6450b1293" target="_blank">LinkedIn</a>
+  </div>
+</section>
+
 
 
 </body>
