--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </header>
 
   <section class="hero">
-    <h1>Hero Title A </h1>
+    <h1>Nickobeast 1</h1>
     <p>Informatics & Computer Science Student @ Strathmore University</p>
     <a href="#projects" class="cta">Check Out My Work</a>
   </section>
