feat : Add projects section to portfolio
issue: #4

--- a/index.html
+++ b/index.html
@@ -35,6 +35,25 @@
         </div>
       </div>
     </section>
+
+    <section id="projects">
+    <h2>Projects</h2>
+    <div class="projects-container">
+      <div class="project-card">
+        <h3>Student Dropout Prediction System</h3>
+        <p>A machine learning web tool that predicts student dropout risk in Kenyan universities using Random Forest and XGBoost.</p>
+        <p><strong>Tech Used:</strong> Python, Flask, HTML, CSS, XGBoost</p>
+        <a href="#">View GitHub</a>
+      </div>
+      <div class="project-card">
+        <h3>Logistics Dashboard</h3>
+        <p>A Power BI dashboard analyzing transport routes, revenue, and costs for logistics decision-making.</p>
+        <p><strong>Tech Used:</strong> Power BI, SQL, Excel</p>
+        <a href="#">View Report</a>
+      </div>
+    </div>
+  </section>
+
   </main>
 
 </body>
