feat: Add contact section with form to portfolio
issue: #5

--- a/index.html
+++ b/index.html
@@ -54,6 +54,22 @@
     </div>
   </section>
 
+  <section id="contact">
+  <h2>Contact Me</h2>
+  <div class="contact-container">
+    <form class="contact-form">
+      <input type="text" placeholder="Your Name" required>
+      <input type="email" placeholder="Your Email" required>
+      <textarea rows="5" placeholder="Your Message" required></textarea>
+      <button type="submit">Send</button>
+    </form>
+    <div class="contact-info">
+      <p>📧 Email: saleh@example.com</p>
+      <p>🔗 LinkedIn: <a href="https://linkedin.com/in/salehalkithiry" target="_blank">linkedin.com/in/salehalkithiry</a></p>
+    </div>
+  </div>
+</section>
+
   </main>
 
 </body>
