feature: Add contact section with form to portfolio
issue: 5

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <button type="submit">Send</button>
     </form>
     <div class="contact-info">
-      <p>📧 Email: saleh@example.com</p>
+      <p>📧 Email: saleh.saleh@strathmore.edu</p>
       <p>🔗 LinkedIn: <a href="https://linkedin.com/in/salehalkithiry" target="_blank">linkedin.com/in/salehalkithiry</a></p>
     </div>
   </div>
