feature: Add footer section to portfolio
issue: #6

--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
   </div>
 </section>
 
+<footer>
+  <p>© 2025 Saleh Alkithiry. All rights reserved.</p>
+  <div class="footer-links">
+    <a href="https://github.com/salehalkithiry" target="_blank">GitHub</a>
+    <a href="https://linkedin.com/in/salehalkithiry" target="_blank">LinkedIn</a>
+  </div>
+</footer>
+
   </main>
 
 </body>
