feature: Add profile image
issue: #8

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="about">
       <h2>About Me</h2>
       <div class="about-container">
-        <img src="images/profile.jpg" alt="Profile Photo of Saleh Alkithiry" class="profile-photo">
+        <img src="profile.jpg" alt="Profile Photo of Saleh Alkithiry" class="profile-photo">
         <div class="about-text">
           <p>Hi! I'm Saleh Alkithiry, a tech enthusiast and aspiring developer. I'm currently pursuing a Bachelor of Informatics and Computer Science at Strathmore University.</p>
           <p>I enjoy building real-world projects, especially involving web development and data analysis. I’ve worked on solutions using Power BI, SQL, and Laravel.</p>
