--- a/index.html
+++ b/index.html
@@ -127,17 +127,22 @@
                                     Working on various academic and personal projects including web applications,
                                     mobile apps, and data analysis projects. Experienced in both front-end and
                                     back-end development.</p>
-                                
+
                                 <p><strong>Mid Level Backend Developer</strong><br>
-                                    Currently employed at Hasibu Technologies, where I contribute to building and maintaining scalable backend systems, collaborate with cross-functional teams, and help deliver robust software solutions.
+                                    Currently employed at Hasibu Technologies, where I contribute to building and
+                                    maintaining scalable backend systems, collaborate with cross-functional teams, and
+                                    help deliver robust software solutions.
                                 </p>
-                                
+
                                 <p><strong>Internships</strong><br>
-                                    Participated in internships where I gained hands-on experience in software development,
-                                    collaborating with teams, and applying theoretical knowledge to practical scenarios.</p>
+                                    Participated in internships where I gained hands-on experience in software
+                                    development,
+                                    collaborating with teams, and applying theoretical knowledge to practical scenarios.
+                                </p>
 
                                 <p><strong>Hackathons</strong><br>
-                                    Actively participated in hackathons, where I developed quick prototypes and solutions
+                                    Actively participated in hackathons, where I developed quick prototypes and
+                                    solutions
                                     to real-world problems, enhancing my problem-solving skills and teamwork.</p>
                                 </p>
                             </div>
@@ -183,7 +188,8 @@
                             <h4>Quick Facts</h4>
                             <ul class="facts-list">
                                 <li><span class="fact-icon">📍</span> Based in Nairobi, Kenya</li>
-                                <li><span class="fact-icon">🎯</span> Focused on Full-Stack Development and Machine Learning</li>
+                                <li><span class="fact-icon">🎯</span> Focused on Full-Stack Development and Machine
+                                    Learning</li>
                                 <li><span class="fact-icon">🚀</span> Always Learning Something New</li>
                                 <li><span class="fact-icon">☕</span> Fueled by Coffee, Music & Curiosity</li>
                             </ul>
@@ -194,10 +200,201 @@
         </section>
 
         <!-- Skills Section -->
+        <!-- Skills Section -->
         <section id="skills" class="skills">
             <div class="container">
-                <h2>Skills</h2>
-                <p>Skills showcase coming soon...</p>
+                <h2 class="section-title">Skills & Technologies</h2>
+                <div class="skills-content">
+                    <div class="skills-intro">
+                        <p>Here are the technologies and tools I work with. I'm always learning and expanding my
+                            skillset!</p>
+                    </div>
+
+                    <div class="skills-categories">
+                        <!-- Frontend Skills -->
+                        <div class="skill-category">
+                            <h3 class="category-title">
+                                <span class="category-icon">🎨</span>
+                                Frontend Development
+                            </h3>
+                            <div class="skills-grid">
+                                <div class="skill-item" data-skill="90">
+                                    <div class="skill-icon">
+                                        <span class="tech-symbol">HTML</span>
+                                    </div>
+                                    <div class="skill-info">
+                                        <h4>HTML5</h4>
+                                        <div class="skill-bar">
+                                            <div class="skill-progress" data-width="90"></div>
+                                        </div>
+                                        <span class="skill-level">Advanced</span>
+                                    </div>
+                                </div>
+
+                                <div class="skill-item" data-skill="85">
+                                    <div class="skill-icon">
+                                        <span class="tech-symbol">CSS</span>
+                                    </div>
+                                    <div class="skill-info">
+                                        <h4>CSS3 & Sass</h4>
+                                        <div class="skill-bar">
+                                            <div class="skill-progress" data-width="85"></div>
+                                        </div>
+                                        <span class="skill-level">Advanced</span>
+                                    </div>
+                                </div>
+
+                                <div class="skill-item" data-skill="75">
+                                    <div class="skill-icon">
+                                        <span class="tech-symbol">JS</span>
+                                    </div>
+                                    <div class="skill-info">
+                                        <h4>JavaScript</h4>
+                                        <div class="skill-bar">
+                                            <div class="skill-progress" data-width="75"></div>
+                                        </div>
+                                        <span class="skill-level">Intermediate</span>
+                                    </div>
+                                </div>
+
+                                <div class="skill-item" data-skill="70">
+                                    <div class="skill-icon">
+                                        <span class="tech-symbol">⚛️</span>
+                                    </div>
+                                    <div class="skill-info">
+                                        <h4>React</h4>
+                                        <div class="skill-bar">
+                                            <div class="skill-progress" data-width="70"></div>
+                                        </div>
+                                        <span class="skill-level">Intermediate</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Backend Skills -->
+                        <div class="skill-category">
+                            <h3 class="category-title">
+                                <span class="category-icon">⚙️</span>
+                                Backend Development
+                            </h3>
+                            <div class="skills-grid">
+                                <div class="skill-item" data-skill="80">
+                                    <div class="skill-icon">
+                                        <span class="tech-symbol">PY</span>
+                                    </div>
+                                    <div class="skill-info">
+                                        <h4>Python</h4>
+                                        <div class="skill-bar">
+                                            <div class="skill-progress" data-width="80"></div>
+                                        </div>
+                                        <span class="skill-level">Advanced</span>
+                                    </div>
+                                </div>
+
+                                <div class="skill-item" data-skill="80">
+                                    <div class="skill-icon">
+                                        <span class="tech-symbol">PHP</span>
+                                    </div>
+                                    <div class="skill-info">
+                                        <h4>PHP</h4>
+                                        <div class="skill-bar">
+                                            <div class="skill-progress" data-width="80"></div>
+                                        </div>
+                                        <span class="skill-level">Advanced</span>
+                                    </div>
+                                </div>
+
+                                <div class="skill-item" data-skill="65">
+                                    <div class="skill-icon">
+                                        <span class="tech-symbol">JAVA</span>
+                                    </div>
+                                    <div class="skill-info">
+                                        <h4>Java</h4>
+                                        <div class="skill-bar">
+                                            <div class="skill-progress" data-width="65"></div>
+                                        </div>
+                                        <span class="skill-level">Intermediate</span>
+                                    </div>
+                                </div>
+
+
+
+                                <div class="skill-item" data-skill="65">
+                                    <div class="skill-icon">
+                                        <span class="tech-symbol">NODE</span>
+                                    </div>
+                                    <div class="skill-info">
+                                        <h4>Node.js</h4>
+                                        <div class="skill-bar">
+                                            <div class="skill-progress" data-width="65"></div>
+                                        </div>
+                                        <span class="skill-level">Intermediate</span>
+                                    </div>
+                                </div>
+
+                                <div class="skill-item" data-skill="75">
+                                    <div class="skill-icon">
+                                        <span class="tech-symbol">SQL</span>
+                                    </div>
+                                    <div class="skill-info">
+                                        <h4>MySQL</h4>
+                                        <div class="skill-bar">
+                                            <div class="skill-progress" data-width="75"></div>
+                                        </div>
+                                        <span class="skill-level">Intermediate</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Tools & Others -->
+                        <div class="skill-category">
+                            <h3 class="category-title">
+                                <span class="category-icon">🛠️</span>
+                                Tools & Technologies
+                            </h3>
+                            <div class="tools-grid">
+                                <div class="tool-item">
+                                    <span class="tool-name">Git & GitHub</span>
+                                </div>
+                                <div class="tool-item">
+                                    <span class="tool-name">VS Code</span>
+                                </div>
+                                <div class="tool-item">
+                                    <span class="tool-name">Figma</span>
+                                </div>
+                                <div class="tool-item">
+                                    <span class="tool-name">MySQL Workbench</span>
+                                </div>
+                                <div class="tool-item">
+                                    <span class="tool-name">Bootstrap</span>
+                                </div>
+                                <div class="tool-item">
+                                    <span class="tool-name">TailWind CSS</span>
+                                </div>
+                                <div class="tool-item">
+                                    <span class="tool-name">Linux</span>
+                                </div>
+                                <div class="tool-item">
+                                    <span class="tool-name">Docker</span>
+                                </div>  
+                                <div class="tool-item">
+                                    <span class="tool-name">Postman</span>
+                                </div>
+                                <div class="tool-item">
+                                    <span class="tool-name">Google Colab</span>
+                                </div>  
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="skills-footer">
+                        <p class="learning-note">
+                            🚀 Currently learning: <strong>TypeScript, Docker, AWS</strong>
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
 
