--- a/index.html
+++ b/index.html
@@ -200,7 +200,6 @@
         </section>
 
         <!-- Skills Section -->
-        <!-- Skills Section -->
         <section id="skills" class="skills">
             <div class="container">
                 <h2 class="section-title">Skills & Technologies</h2>
@@ -399,10 +398,161 @@
         </section>
 
         <!-- Portfolio Section -->
+        <!-- Portfolio Section -->
         <section id="portfolio" class="portfolio">
             <div class="container">
-                <h2>My Portfolio</h2>
-                <p>Projects coming soon...</p>
+                <h2 class="section-title">My Portfolio</h2>
+                <div class="portfolio-intro">
+                    <p>Here are some of the projects I've worked on during my studies and personal time. Each project represents a different aspect of my learning journey in software development.</p>
+                </div>
+                
+                <div class="projects-grid">
+                    <!-- Project 1: Rental Management System -->
+                    <div class="project-card" data-aos="fade-up">
+                        <div class="project-image">
+                            <div class="project-placeholder">
+                                <span class="project-icon">🏠</span>
+                            </div>
+                            <div class="project-overlay">
+                                <div class="project-links">
+                                    <a href="#" class="project-link" title="Live Demo">
+                                        <span>🔗</span>
+                                    </a>
+                                    <a href="https://github.com/Pahom21/RentalHousingSystem" class="project-link" title="GitHub">
+                                        <span>⚡</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-content">
+                            <h3 class="project-title">Rental Management System</h3>
+                            <p class="project-description">
+                                A comprehensive rental management system built during my third year. Features property management, tenant tracking, payment processing, and reporting capabilities.
+                            </p>
+                            <div class="project-tech">
+                                <span class="tech-tag">Laravel</span>
+                                <span class="tech-tag">PHP</span>
+                                <span class="tech-tag">MySQL</span>
+                                <span class="tech-tag">Bootstrap</span>
+                                <span class="tech-tag">Vonage</span>
+                            </div>
+                            <div class="project-status">
+                                <span class="status-badge in-development">In Development</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Project 2: Car Rental System -->
+                    <div class="project-card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="project-image">
+                            <div class="project-placeholder">
+                                <span class="project-icon">🚗</span>
+                            </div>
+                            <div class="project-overlay">
+                                <div class="project-links">
+                                    <a href="#" class="project-link" title="Live Demo">
+                                        <span>🔗</span>
+                                    </a>
+                                    <a href="https://github.com/Pahom21/Carental" class="project-link" title="GitHub">
+                                        <span>⚡</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-content">
+                            <h3 class="project-title">Car Rental System</h3>
+                            <p class="project-description">
+                                A desktop application for managing car rentals built with Java. Includes vehicle inventory management, customer registration, booking system, and payment tracking.
+                            </p>
+                            <div class="project-tech">
+                                <span class="tech-tag">Java</span>
+                                <span class="tech-tag">Swing</span>
+                                <span class="tech-tag">MySQL</span>
+                                <span class="tech-tag">JDBC</span>
+                            </div>
+                            <div class="project-status">
+                                <span class="status-badge in-development">In Development</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Project 3: Music App Clone -->
+                    <div class="project-card" data-aos="fade-up" data-aos-delay="200">
+                        <div class="project-image">
+                            <div class="project-placeholder">
+                                <span class="project-icon">🎵</span>
+                            </div>
+                            <div class="project-overlay">
+                                <div class="project-links">
+                                    <a href="#" class="project-link" title="Live Demo">
+                                        <span>🔗</span>
+                                    </a>
+                                    <a href="https://github.com/Pahom21/MusicApp" class="project-link" title="GitHub">
+                                        <span>⚡</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-content">
+                            <h3 class="project-title">Music Streaming App</h3>
+                            <p class="project-description">
+                                A music streaming application clone featuring user authentication, playlist management, audio streaming, and social features for music discovery and sharing.
+                            </p>
+                            <div class="project-tech">
+                                <span class="tech-tag">Laravel</span>
+                                <span class="tech-tag">Vue.js</span>
+                                <span class="tech-tag">MySQL</span>
+                            </div>
+                            <div class="project-status">
+                                <span class="status-badge in-development">In Development</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Project 4: This Portfolio -->
+                    <div class="project-card" data-aos="fade-up" data-aos-delay="300">
+                        <div class="project-image">
+                            <div class="project-placeholder">
+                                <span class="project-icon">💼</span>
+                            </div>
+                            <div class="project-overlay">
+                                <div class="project-links">
+                                    <a href="https://elvis-makara-portfolio.vercel.app/" class="project-link" title="Live Demo">
+                                        <span>🔗</span>
+                                    </a>
+                                    <a href="https://github.com/Pahom21/Personal-Repo" class="project-link" title="GitHub">
+                                        <span>⚡</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-content">
+                            <h3 class="project-title">Personal Portfolio</h3>
+                            <p class="project-description">
+                                This responsive portfolio website showcasing my projects, skills, and experience. Built with modern web technologies and deployed on Vercel for optimal performance.
+                            </p>
+                            <div class="project-tech">
+                                <span class="tech-tag">Next.js</span>
+                                <span class="tech-tag">Tailwind CSS</span>
+                                <span class="tech-tag">JavaScript</span>
+                                <span class="tech-tag">Vercel</span>
+                            </div>
+                            <div class="project-status">
+                                <span class="status-badge live">Live</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-footer">
+                    <p class="more-projects">
+                        More projects coming soon! I'm constantly working on new ideas and learning new technologies.
+                    </p>
+                    <a href="https://github.com/Pahom21" class="btn btn-primary" target="_blank">
+                        <span>View All Projects on GitHub</span>
+                        <i class="arrow">→</i>
+                    </a>
+                </div>
             </div>
         </section>
 
