Feat: Add about me to the profile page
Structured the landing page with a detailed About Me section,
laying the groundwork for dynamic rendering and responsive design.

Closes #4

--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
     </div>
   </section>
   
+  <section id="about" class="section">
+    <div class="container">
+      <h2>About Me</h2>
+      <div id="about-content">
+        <p>I'm a fourth-year student at Strathmore University pursuing a Bachelor's in Informatics and Computer Science. I specialize in web development with Laravel, Next.js, and React Native, and I'm an upcoming AI/ML engineer passionate about designing algorithms to solve real-world problems.</p>
+        <p>I interned at Bityarn Consult as a Software Engineer, working with Laravel, Vue.js, and Docker. I lead the Feedback Committee in Strathmore's 16th Student Council Academic Docket and contribute to the SCESA media team as a videographer and editor using Adobe Premiere Pro and CapCut.</p>
+        <p>My passions include learning, community engagement, and creating user-friendly UI/UX designs, IoT solutions, and database management systems.</p>
+      </div>
+    </div>
+  </section>
+  
   <script src="script.js"></script>
 </body>
 </html>
