Feat: Adding footer
addition of footer on the landing page that has the personal contact information

Closes #15

--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@
     </div>
   </section>
   
+  <div id="custom-sections"></div>
+  
+  <footer>
+    <div class="container">
+      <p>© 2025 Dennis Wanjiku. All rights reserved.</p>
+      <p><a href="mailto:dennis.wanjiku@example.com">Contact Me</a></p>
+    </div>
+  </footer>
+  
   <script src="script.js"></script>
 </body>
 </html>
