--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <div class="about-text">
           <p>Hi! I'm Saleh Alkithiry, a tech enthusiast and aspiring developer. I'm currently pursuing a Bachelor of Informatics and Computer Science at Strathmore University.</p>
           <p>I enjoy building real-world projects, especially involving web development and data analysis. I’ve worked on solutions using Power BI, SQL, and Laravel.</p>
-          <p>Hi! I'm Saleh Alkithiry, a passionate tech lover.</p>
+          <p>Hello! I'm Saleh Alkithiry, a full-stack developer in training.</p>
+
 
           <ul>
             <li>📊 Data Analytics</li>
